# ESP32-WiFi-http-client-with-InfluxDB

./: CMakeLists.txt  README.md  dataQuery.py  sdkconfig
main/: CMakeLists.txt  adc_custom.c  adc_custom.h  http_custom.c  http_custom.h  main.c  tasks_info.h  wifi_custom.c  wifi_custom.h
main/BME280_driver/: bme280_driver.c  bme280_driver.h  bmx280.c  bmx280.h
main/SHTC3_driver/: shtc3.c  shtc3.h  shtc3_driver.c  shtc3_driver.h
main/SHTC3_driver/examples/shtc3_read/main/: shtc3_read.c
